Introduced `astrapy-repl` command for a ready-to-use interactive REPL
Event Observer API, to listen to events:
    - this complements the standard logging mechanism;
    - events are: warnings, payloads/responses, ...
    - useful for customized logging, observability and instrumentation;
    - see `astrapy.event_observers` module and docstring of classes therein for more.
mainteinance: enabled text-index integration tests on Astra
maintenance: introduced the publish-and-release workflow machinery
maintenance: split development/maintenance from user README
maintenance. Improvement in testing machinery:
    - Simplified keyspace management in testing.
    - Made keyspace names fully optional in all cases (typically one can forget about them).
    - Adapted/simplified README about testing.
    - KMS-vectorize testing is now optional in the Astra base test suite.


v 2.1.0
=======
Same as 2.1.0rc1


v 2.1.0rc1
==========
AlterTableOperation subclasses:
    - Added positional passing of parameter constructor
    - Accept single-string parameter for the drop-column and drop-vectorize cases
    - Add and AddVectorize constructors accept a 'columns' dict with dict values (now individually coerced)
Switch default encode_maps_as_lists_in_tables to "DATAAPIMAPS" (no observable changes w.r.t. previous releases)
Bugfix: fix paykload encoding for empty maps/DataAPIMaps
User-defined types in tables:
    - type management: `CreateTypeDefinition`, `ListTypeDescriptor`, `AlterTypeOperation`, `AlterTypeAddFields` and `AlterTypeRenameFields` classes
    - type management: Database's `create_type`, `list_type_names`, `list_types`, `alter_type` and `drop_type` methods
    - full support for UDTs in table ddl: `Database.create_table()`/`Database.list_tables()`/`table.definition()`
    - UDT support in tables: introduced `serializer_by_class` and `deserializer_by_udt` serdes options
    - UDT support in tables: introduced `DataAPIDictUDT` default dict-wrapper type