@@ -21,7 +21,7 @@ services:
       retries: 20
 
   data-api:
-    image: stargateio/data-api:v1.0.32
+    image: stargateio/data-api:v1.0.34
     depends_on:
       hcd:
         condition: service_healthy
